--- a/src/components/OrbiLogo.module.css
+++ b/src/components/OrbiLogo.module.css
@@ -1,13 +1,12 @@
 .logotype {
   display: inline-flex;
-  align-items: baseline;
+  align-items: center;
   white-space: nowrap;
 }
 
 .mark {
   width: 0.74em;
   height: 0.74em;
-  vertical-align: -0.09em;
   margin-right: 0.02em;
   flex-shrink: 0;
 }
